# music-service

./: .dockerignore  .env.sample  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: pipeline.yml
src/: alembic.ini
src/app/: main.py
src/app/api/routes/: __init__.py
src/app/api/routes/v1/: __init__.py  albums.py  healthcheck.py  playlists.py  tracks.py
src/app/database/postgres/: connection.py
src/app/database/postgres/migrations/: env.py
src/app/database/postgres/migrations/versions/: 2024_07_18_1404-cd30c78b3e43_test_migration.py  2024_07_18_1638-b3d1be82b878_test_migration.py
src/app/database/postgres/models/alchemy/: __init__.py  base.py
src/app/middlewares/: __init__.py  cors.py
src/app/settings/: settings.py
